# flamenco

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  debug-worker-add.sh  go.mod  go.sum  sqlc.yaml
.gitea/default_merge_message/: REBASE_TEMPLATE.md  SQUASH_TEMPLATE.md
.gitea/issue_template/: bug.yaml  jobtype.yaml
addon/: README.md  pyproject.toml
addon/flamenco/: __init__.py  comms.py  gui.py  job_submission.py  job_types.py  job_types_propgroup.py  manager_README.md  manager_info.py  operators.py  preferences.py  projects.py  worker_tags.py
addon/flamenco/bat/: __init__.py  cache.py  interface.py  shaman.py  submodules.py
addon/flamenco/bat_v2/: __init__.py  pack_fs.py  pack_shaman.py  submodules.py
addon/flamenco/manager/: __init__.py  api_client.py  configuration.py
addon/flamenco/manager/api/: jobs_api.py  meta_api.py  shaman_api.py
addon/flamenco/manager/docs/: AssignedTask.md  AssignedWorker.md  AvailableJobSetting.md  AvailableJobType.md  BlenderPathSource.md  Command.md  EventFarmStatus.md  EventJobUpdate.md  EventLastRenderedUpdate.md  EventLifeCycle.md  EventTaskLogUpdate.md  EventTaskUpdate.md  EventWorkerTagUpdate.md  EventWorkerUpdate.md  FarmStatus.md  FarmStatusReport.md  Job.md  JobAllOf.md  JobMassDeletionSelection.md  JobStatus.md  JobTagChange.md  JobsApi.md  LifeCycleEventType.md  MetaApi.md  ShamanApi.md  SocketIOSubscription.md  SubmittedJob.md  Task.md  TaskSummary.md  TaskUpdate.md  WorkerApi.md  WorkerTag.md  WorkerTask.md
addon/flamenco/manager/model/: assigned_task.py  assigned_worker.py  available_job_setting.py  available_job_type.py  blender_path_source.py  command.py  event_farm_status.py  event_job_update.py  event_last_rendered_update.py  event_life_cycle.py  event_task_log_update.py  event_task_update.py  event_worker_tag_update.py  event_worker_update.py  farm_status.py  farm_status_report.py  job.py  job_all_of.py  job_mass_deletion_selection.py  job_status.py  job_tag_change.py  life_cycle_event_type.py  submitted_job.py  task.py  task_summary.py  task_update.py  worker_tag.py  worker_task.py
addon/flamenco/manager/models/: __init__.py
addon/flamenco/wheels/: __init__.py  blender_asset_tracer-1.18-py3-none-any.whl  blender_asset_tracer-1.19-py3-none-any.whl  blender_asset_tracer-1.21-py3-none-any.whl  blender_asset_tracer-1.23-py3-none-any.whl  blender_asset_tracer-2.0b1-py3-none-any.whl  blender_asset_tracer-2.0b2-py3-none-any.whl
cmd/flamenco-manager/: main.go  webservice.go
cmd/flamenco-worker/: find_exes.go  main.go
cmd/mqtt-server/: README.md  hook.go  main.go  mqtt_server.go
cmd/shaman-checkout-id-setter/: main.go
cmd/sqlc-export-schema/: main.go
cmd/stresser/: main.go
cmd/task-poker/: taskpoker.go
cmd/update-version/: main.go  (+1 more)
magefiles/: addonpacker.go  build.go  check.go  clean.go  devserver.go  generate.go  install.go  runner.go  version.go
(+364 files in other folders)
