[project]
name = "flamenco"
version = "3.0"
description = "Flamenco client add-on for Blender"
authors = [{ name = "Sybren A. Stüvel", email = "sybren@blender.org" }]
requires-python = ">=3.10,<4"
license = "GPL-3.0-or-later"
dependencies = [
    "urllib3>=2.4.0,<3",
    "python-dateutil>=2.9.0,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.19,<2",
    "ruff>=0.15,<1",
]
