[project]
name = "flamenco"
version = "3.0"
description = "Flamenco client add-on for Blender"
authors = [{ name = "Sybren A. Stüvel", email = "sybren@blender.org" }]
requires-python = ">=3.10,<4"
license = "GPL-3.0-or-later"
dependencies = [
    "urllib3>=2.4.0,<3",
    "python-dateutil>=2.9.0,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.19,<2",
    "ruff>=0.15,<1",
]

[tool.mypy]
python_version = "3.10"
# strict = true
ignore_missing_imports = true
strict_optional = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
files = ["flamenco"]

# Ignore errors in generated code.
[[tool.mypy.overrides]]
module = "flamenco.manager.*"
ignore_errors = true
