[project]
name = "flamenco"
version = "3.0"
description = "Flamenco client add-on for Blender"
authors = [{ name = "Sybren A. Stüvel", email = "sybren@blender.org" }]
requires-python = ">=3.13,<4"
license = "GPL-3.0-or-later"
dependencies = [
    "urllib3>=2.4.0,<3",
    "python-dateutil>=2.9.0,<3",
    "blender-asset-tracer>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.19,<2",
    "ruff>=0.15,<1",
]

[tool.uv.sources]
blender-asset-tracer = { path = "../../blender-asset-tracer", editable = true }

[tool.mypy]
# strict = true
ignore_missing_imports = true
strict_optional = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
files = ["flamenco"]

# Ignore errors in generated code.
[[tool.mypy.overrides]]
module = "flamenco.manager.*"
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py313"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = ["E4", "E7", "E9", "F", "W", "C901"]
lint.ignore = ["I001"]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []
